re-fix date & time inputs on ios mobile

--- a/src/components/form/classes.module.scss
+++ b/src/components/form/classes.module.scss
@@ -181,7 +181,7 @@
 
     .date_input_container,
     .time_input_container {
-      min-height: 50px;
+      min-height: 48px;
     }
   }
 }
